logs/open-vsdcli.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/open_vsdcli'...
Compiling './lib/python3.5/site-packages/open_vsdcli/vsd_client.py'...
***   File "./lib/python3.5/site-packages/open_vsdcli/vsd_client.py", line 47
    print '#####################################################'
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/open_vsdcli/vsd_common.py'...
***   File "./lib/python3.5/site-packages/open_vsdcli/vsd_common.py", line 40
    print table
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/open_vsdcli/vsd_dhcp.py'...
***   File "./lib/python3.5/site-packages/open_vsdcli/vsd_dhcp.py", line 30
    print table
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/open_vsdcli/vsd_domain.py'...
***   File "./lib/python3.5/site-packages/open_vsdcli/vsd_domain.py", line 17
    print table
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/open_vsdcli/vsd_enterprise.py'...
***   File "./lib/python3.5/site-packages/open_vsdcli/vsd_enterprise.py", line 16
    print table
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/open_vsdcli/vsd_gateway.py'...
***   File "./lib/python3.5/site-packages/open_vsdcli/vsd_gateway.py", line 73
    print table
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/open_vsdcli/vsd_license.py'...
***   File "./lib/python3.5/site-packages/open_vsdcli/vsd_license.py", line 29
    print table
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/open_vsdcli/vsd_metadata.py'...
***   File "./lib/python3.5/site-packages/open_vsdcli/vsd_metadata.py", line 25
    print table
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/open_vsdcli/vsd_policy.py'...
***   File "./lib/python3.5/site-packages/open_vsdcli/vsd_policy.py", line 32
    print table
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/open_vsdcli/vsd_subnet.py'...
***   File "./lib/python3.5/site-packages/open_vsdcli/vsd_subnet.py", line 41
    print table
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/open_vsdcli/vsd_user.py'...
***   File "./lib/python3.5/site-packages/open_vsdcli/vsd_user.py", line 30
    print table
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/open_vsdcli/vsd_vm.py'...
***   File "./lib/python3.5/site-packages/open_vsdcli/vsd_vm.py", line 44
    print table
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/open_vsdcli/vsd_vport.py'...
***   File "./lib/python3.5/site-packages/open_vsdcli/vsd_vport.py", line 28
    print table
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/open_vsdcli/vsd_vsp.py'...
***   File "./lib/python3.5/site-packages/open_vsdcli/vsd_vsp.py", line 21
    print table
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/open_vsdcli-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prettytable-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
